# lighter-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  install.sh  pyproject.toml  smithery.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
adapters/_shared/: README.md  sync.sh
adapters/_shared/agents/: lighter-trader.md
adapters/_shared/commands/: lighter-audit.md  lighter-kill.md  lighter-paper.md  lighter-positions.md  lighter-status.md
adapters/_shared/hooks/: after-lighter-trade.sh
adapters/claude/: README.md  claude_code_config.example.json
adapters/claude-desktop/: README.md
adapters/claude/commands/: lighter-paper.md  lighter-positions.md
adapters/claude/skill/: SKILL.md
adapters/codex/: .mcp.json  README.md
adapters/codex/.codex-plugin/: plugin.json
adapters/codex/.codex-plugin/agents/: lighter-trader.md
adapters/codex/.codex-plugin/commands/: lighter-audit.md  lighter-kill.md  lighter-paper.md  lighter-positions.md  lighter-status.md
adapters/codex/.codex-plugin/hooks/: after-lighter-trade.sh
adapters/codex/skills/lighter/: SKILL.md
adapters/cursor/: README.md  hooks.json
adapters/cursor/agents/: lighter-trader.md
adapters/cursor/commands/: lighter-audit.md  lighter-kill.md  lighter-status.md
adapters/cursor/rules/: lighter-safety.mdc
adapters/generic/: README.md
adapters/openclaw/: README.md  daemon.example.toml  mcp.example.json  telegram-safety.md
configs/: com.lighter.price-watcher.example.plist  lighter-mcp.example.toml  lighter-mcp.live.example.toml  lighter-mcp.paper.toml  lighter-mcp.readonly.toml  price-alerts.example.toml
docs/: audit-log.md  configuration.md  getting-started.md  security.md
docs/integrations/: claude.md  codex.md  cursor.md  generic-mcp.md  openclaw.md
examples/: funding-scan.md  guarded-live-order.md  paper-demo.md
examples/live-pnl-watcher/: README.md  start.sh  trade.sh  watch.py  watch.sh
lighter_mcp/: __init__.py  audit.py  config.py  confirmations.py  installer.py  price_watcher.py  runner.py  safety.py  schemas.py  server.py  tools_funds.py  tools_live.py  tools_paper.py  tools_read.py
lighter_mcp/transports/: __init__.py  http.py  stdio.py
packaging/homebrew/: lighter-mcp.rb
tests/: conftest.py  test_app_smoke.py  test_audit.py  test_confirmations.py  test_installer.py  test_live_safety_integration.py  test_modes.py  test_runner.py  test_safety.py  test_security_audit.py
website/: .gitignore  README.md  docs.json  index.mdx  package.json
website/adapters/: claude-code.mdx  claude-desktop.mdx  codex.mdx  cursor.mdx  generic.mdx  openclaw.mdx  overview.mdx
website/get-started/: configuration.mdx  installation.mdx  modes-and-safety.mdx  quickstart.mdx  what-is-lighter-mcp.mdx
website/guides/: first-paper-trade.mdx  funding-scan.mdx  guarded-live-order.mdx  live-pnl-watcher.mdx  price-alerts.mdx
website/reference/: audit-log.mdx  cli.mdx  confirmations.mdx  error-envelope.mdx  safety.mdx
website/security/: disclaimer.mdx  threat-model.mdx
website/tools/: diagnostics.mdx  funds.mdx  live.mdx  overview.mdx  paper.mdx  read.mdx
