[project]
name = "lighter-mcp"
version = "0.1.0"
description = "Portable MCP server exposing Lighter trading tools across Cursor, Claude, Codex, OpenClaw, and generic MCP clients."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Lighter MCP Toolkit" },
]
keywords = ["lighter", "mcp", "trading", "perpetuals", "defi", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.2",
    "pydantic>=2.6",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
http = ["uvicorn>=0.27", "starlette>=0.36"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage      = "https://github.com/iamgoatedaf/lighter-mcp"
Source        = "https://github.com/iamgoatedaf/lighter-mcp"
Issues        = "https://github.com/iamgoatedaf/lighter-mcp/issues"
Changelog     = "https://github.com/iamgoatedaf/lighter-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/iamgoatedaf/lighter-mcp/blob/main/README.md"

[project.scripts]
lighter-mcp = "lighter_mcp.server:main"

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lighter_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
